mysql-statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-database
spec:
  selector:
    matchLabels:
      app: mysql-database
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql-database
    spec:
      containers:
        - name: mysql-database
          image: mysql:8.0
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 250m
              memory: 1Gi
          ports:
            - containerPort: 3306
              name: mysql-database
          volumeMounts:
            - name: mysql-database-persistent-storage
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: mysql-database-persistent-storage
      spec:
        storageClassName: standard
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 5Gi
---
