wordpress-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deployment
  labels:
    app: wordpress-deployment
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress-deployment
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: wordpress-deployment
    spec:
      securityContext:
        supplementalGroups: [33]
      containers:
        - name: wordpress
          image: wordpress:php8.5-fpm
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi

          ports:
            - containerPort: 9000
          volumeMounts:
            - name: wordpress-persistent-storage
              mountPath: /var/www/html
        - name: nginx
          image: nginx:latest #daha stable olmasi icin version tanimlanabilir ben boyle tercih ettim
          ports:
            - containerPort: 80
          volumeMounts:
            - name: wordpress-persistent-storage
              mountPath: /var/www/html
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
      volumes:
        - name: wordpress-persistent-storage
          persistentVolumeClaim:
            claimName: wordpress-pvc
        - name: nginx-config
          configMap:
            name: nginx-configmap
---
