mysql-headless-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  selector:
    app: mysql-database
  ports:
    - port: 3306
  clusterIP: None
---
