wordpress-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
spec:
  selector:
    app: wordpress-deployment
  ports:
    - port: 80
      targetPort: 80
---
