gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: wordpress-gateway
spec:
  gatewayClassName: wordpress-gatewayclass
  listeners:
    - name: http
      protocol: HTTP
      port: 80
---
