wordpress-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wordpress-httproute
spec:
  parentRefs:
    - name: wordpress-gateway
  hostnames:
    - "deneme.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: wordpress-service
          port: 80
---
